tests/fixtures/invalid/pow_none_list_list.py
# Cannot call pow() with None, List[int], List[int]
x = pow(None, [1, 2, 3], [1, 2, 3])
